lib/src/complete/snapshots/usage__complete__fish__tests__complete_fish-3.snap
---
source: lib/src/complete/fish.rs
expression: "complete_fish(&CompleteOptions\n{\n    usage_bin: \"usage\".to_string(), shell: \"fish\".to_string(), bin:\n    \"mycli\".to_string(), cache_key: None, spec:\n    Some(SPEC_KITCHEN_SINK.clone()), usage_cmd: None, source_file: None,\n})"
---
# @generated by usage-cli from usage spec

# if "usage" is not installed show an error
if ! type -P usage &> /dev/null
    echo >&2
    echo "Error: usage CLI not found. This is required for completions to work in mycli." >&2
    echo "See https://usage.jdx.dev for more information." >&2
    return 1
end

set _usage_spec_mycli 'name mycli
bin mycli
source_code_link_template "https://github.com/jdx/mise/blob/main/src/cli/{{path}}.rs"
flag --flag1 help="flag1 description"
flag --flag2 help="flag2 description" {
    long_help #"""
flag2 long description

includes a code block:

    $ echo hello world
    hello world

    more code

Examples:

    # run with no arguments to use the interactive selector
    $ mise use

    # set the current version of node to 20.x in mise.toml of current directory
    # will write the fuzzy version (e.g.: 20)

some docs

    $ echo hello world
    hello world
"""#
}
flag --flag3 help="flag3 description" negate=--no-flag3
flag --with-default default="default value"
flag --shell {
    arg <shell> {
        choices bash zsh fish
    }
}
arg <arg1> help="arg1 description"
arg "[arg2]" help="arg2 description" required=#false default="default value" {
    choices choice1 choice2 choice3
}
arg <arg3> help="arg3 description" help_long="arg3 long description"
arg <argrest>… var=#true
arg "[with-default]" required=#false default="default value"
complete plugin run=#"""
echo "plugin-1
plugin-2
plugin-3"
"""#
cmd plugin {
    cmd install {
        long_help "install a plugin"
        flag "-g --global" global=#true
        flag "-d --dir" {
            arg <dir>
        }
        flag "-f --force" negate=--no-force
        arg <plugin>
        arg <version>
    }
}
'
set -l spec_dir (if set -q XDG_CACHE_HOME; echo $XDG_CACHE_HOME; else; echo $HOME/.cache; end)/usage
test -d "$spec_dir"; or mkdir -p -m 700 "$spec_dir"
set -l spec_file "$spec_dir/usage__usage_spec_mycli.spec"
echo $_usage_spec_mycli > "$spec_file"

# stderr is discarded: a line that doesn't parse (`mycli help <Tab>`) makes
# complete-word fail, and its error would be printed over the prompt.
# The word being completed is cut at the cursor (`-c`) and unquoted, so
# `'prod<Tab>` and `sub\ dir/<Tab>` match the same values as their bare
# spellings; fish re-quotes whatever it inserts.
if commandline -x >/dev/null 2>&1
    complete -xc mycli -a "(command usage complete-word --shell fish -f \"$spec_file\" -- (commandline -xpc) (commandline -ct | string unescape) 2>/dev/null)"
else
    complete -xc mycli -a "(command usage complete-word --shell fish -f \"$spec_file\" -- (commandline -opc) (commandline -ct | string unescape) 2>/dev/null)"
end
